# opengl_template

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CPPLINT.cfg  README.md  conanfile.txt
.github/workflows/: release_linux.yml
apps/: CMakeLists.txt
apps/app1/: CMakeLists.txt
apps/app1/src/: main.cpp
apps/app2/: CMakeLists.txt
apps/app2/src/: main.cpp
apps/app3/: CMakeLists.txt
apps/app3/include/: RightTriangle.h
apps/app3/src/: RightTriangle.cpp  main.cpp
apps/app4/: CMakeLists.txt
apps/app4/include/: Shader.h  Spring.h  Texture.h
apps/app4/shaders/: texture.fs
apps/app4/src/: Shader.cpp  Spring.cpp  Texture.cpp  main.cpp
apps/app5/: CMakeLists.txt
apps/app5/include/: Pendulum.h  Texture.h
apps/app5/src/: Pendulum.cpp  main.cpp
apps/lab1/: CMakeLists.txt
apps/lab1/src/: main.cpp
cmake/: app.cmake  conan.cmake
conan/: conanfile.txt
src/: CMakeLists.txt  main.cpp
